<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.onboarding.OnBoardingFragment">


    <ImageView
        android:id="@+id/iv_boarding1"
        android:layout_width="0dp"
        android:layout_height="349dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_vector_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_find_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_article"
        android:fontFamily="@font/poppins_bold"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_boarding1" />

    <TextView
        android:id="@+id/tv_desc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boarding_1"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_find_article" />

</androidx.constraintlayout.widget.ConstraintLayout>