<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.BrowsingFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_search_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingTop="0dp"
        android:theme="@style/SearchTheme"
        app:defaultQueryHint="Cari Komponen.."
        app:iconifiedByDefault="false"
        app:searchIcon="@drawable/ic_search"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:elevation="3dp"
        android:background="@drawable/bg_searchview"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal" />

    <ImageView
        android:id="@+id/iv_search_for_next"
        android:layout_width="309.69dp"
        android:layout_height="281.12dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="visible"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_search_for_next"/>

    <TextView
        android:id="@+id/tv_search_for_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:text="@string/search_for_next"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins_bold"
        android:minLines="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_no_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/component_list"/>
</LinearLayout>