<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-155dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_logo_airo"/>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/skip"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="18dp"
            android:layout_gravity="end"/>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/nav_1"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:backgroundTint="@null"
        android:background="@drawable/bg_nav_active"
        app:layout_constraintEnd_toStartOf="@id/nav_2"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/btn_next"
        app:layout_constraintBottom_toTopOf="@id/btn_next" />

    <View
        android:id="@+id/nav_2"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:backgroundTint="@null"
        android:background="@drawable/bg_nav_nonactive"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toStartOf="@id/nav_3"
        app:layout_constraintStart_toEndOf="@id/nav_1"
        app:layout_constraintBottom_toTopOf="@id/btn_next" />

    <View
        android:id="@+id/nav_3"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:backgroundTint="@null"
        android:background="@drawable/bg_nav_nonactive"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/btn_next"
        app:layout_constraintStart_toEndOf="@id/nav_2"
        app:layout_constraintBottom_toTopOf="@id/btn_next" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        android:background="@drawable/bg_button_submit"
        app:backgroundTint="@null"
        android:text="@string/next"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_button_back"
        android:textColor="@color/secondary"
        app:backgroundTint="@null"
        android:text="@string/back"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>