<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detail_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </androidx.appcompat.widget.Toolbar>

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                android:paddingTop="32dp" />

            <ImageView
                android:id="@+id/iv_component_image"
                android:layout_width="414dp"
                android:layout_height="288dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:src="@tools:sample/avatars" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_component_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/bg_black_transparent"/>

            <TextView
                android:id="@+id/tv_component_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_component_image"
                tools:text="HyperX PREDATOR RGB 16GB DDR4"/>

            <TextView
                android:id="@+id/tv_component_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_component_name"
                tools:text="Rp. 1.000.000" />

            <TextView
                android:id="@+id/tv_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_component_price"
                android:text="@string/brand"
                tools:text="Brand : " />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:justificationMode="inter_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                tools:text="HyperX yang pasti sudah tidak asing lagi bagi para gamer karena sering sekali muncul dalam iklan-iklan turnamen esports. HyperX tak hanya menyediakan RAM saja, tapi juga sejumlah perangkat keras PC lainnya seperti mouse, keyboard, HDD, hingga kacamata gaming sekalipun. Menarik bukan? Walau begitu, HyperX juga selalu dipercaya sebagai merk ram sodimm terbaik hingga saat ini dengan performa yang tidak usah diragukan. Kamu dapat memilih 3 jenis RAM yang sama-sama tangguh, seperti Fury, Predator, dan Impact. HyperX yang pasti sudah tidak asing lagi bagi para gamer karena sering sekali muncul dalam iklan-iklan turnamen esports. HyperX tak hanya menyediakan RAM saja, tapi juga sejumlah perangkat keras PC lainnya seperti mouse, keyboard, HDD, hingga kacamata gaming sekalipun. Menarik perhatian pembeli." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/secondary"
        app:tint="?attr/colorOnPrimary"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_baseline_favorite_border"/>
</FrameLayout>
